--- a/package.json
+++ b/package.json
@@ -21,6 +21,14 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src",
+    "prettify": "prettier --single-quote --trailing-comma es5 --write \"src/**/*.js\""
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.1",
+    "prettier": "^1.13.7",
+    "prettier-eslint": "^8.8.2"
   }
 }
