--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.1",
+    "flow-bin": "^0.75.0",
     "prettier": "^1.13.7",
     "prettier-eslint": "^8.8.2"
   }
